--- a/frontend/templates/pages/resultat.html
+++ b/frontend/templates/pages/resultat.html
@@ -37,6 +37,11 @@
         </table>
     </div>
 </div>
+<!-- Carte interactive -->
+    <div class="map-page-container" style="margin: 2rem 0;">
+        <h3 class="map-title">Visualisation sur la carte</h3>
+        <div id="map" style="height: 40vh; width: 100%; border-radius: 12px; box-shadow: 0 2px 8px #0002;"></div>
+    </div>
 {% endblock %}
 
 {% block navigation %}
